fix switch outline on safari

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -96,7 +96,6 @@
     background: var(--background);
     opacity: 0.5;
   }
-  
 }
 
 .accessButton {
@@ -215,7 +214,7 @@
   transition: margin 0.3s ease;
   border-radius: 999px;
   z-index: 5;
-  outline: 2px solid var(--foreground-shade-20);
+  box-shadow: 0 0 0 2px var(--foreground-shade-20);
 
   /* &.active {
     margin-left: -10px;
